2011-11-23  Nick Garnett  <nickg@ecoscentric.com>

	* cdl/hal_arm.cdl: Add CDL to control whether both IRQs and FIQs
	are disabled in critical sections, or only IRQs. The default is to
	disable both and translate any FIQs into IRQs for delivery. The
	alternative is for FIQs to essentially exist outside eCos.

	* include/hal_arch.h (CPSR_THREAD_INITIAL):
	* include/hal_intr.h (CPSR_INTR_MASK, HAL_*_INTERRUPTS)
	(HAL_*_FIQ): Add definitions for separating FIQ from IRQ.

	* src/hal_mk_defs.c (main):
	* src/vectors.S (start, FIQ, IRQ, spurious_IRQ):
	(hal_*_interrupts, hal_*_FIQ, __fiq_stack_base): Add support for
	separating FIQ from IRQ in critical section processing.

2009-03-06  John Dallaway  <john@dallaway.org.uk>

	* cdl/hal_arm.cdl: Merge goals for CYGHWR_THUMB and
	CYGBLD_ARM_ENABLE_THUMB_INTERWORK to allow selective application
	of CDL solutions within the eCos Configuration Tool.

2009-02-14  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/vectors.S: Use .type xxx, function everywhere where
	a global associated with code is defined. Otherwise objdump
	treats it as data.

2009-02-09  Nick Garnett  <nickg@ecoscentric.com>

	* src/vectors.S (start): The loop to initialize BSS was using a
	BLS to terminate. This caused an extra zero to be stored beyond
	the end of __bss_end. Usually this is benign, but when __bss_end
	is at the very top of RAM, and the hardware generates an exception
	for illegal accesses, this can crash the program before it even
	starts. The fix is to use a BHI instructions and reverse the
	compare, which will terminate the loop 1 word earlier.

2009-02-02  Bart Veer  <bartv@ecoscentric.com>

	* cdl/hal_arm.cdl: add new architectural CFLAGS and LDFLAGS
	options.

2008-10-07  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/arm.ld: Discard C++ EH-related sections when we can't
	possibly support C++ EH (no CYGPKG_LIBSTDCXX).

2008-09-27  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/hal_mk_defs.c: Also export HAL_BREAKINST_THUMB and